some update from upstream

--- a/apache/conf/httpd.conf
+++ b/apache/conf/httpd.conf
@@ -134,6 +134,7 @@ LoadModule log_config_module modules/mod_log_config.so
 #LoadModule log_forensic_module modules/mod_log_forensic.so
 #LoadModule lua_module modules/mod_lua.so
 LoadModule cache_disk_module modules/mod_cache_disk.so
+#LoadModule md_module modules/mod_md.so
 #LoadModule macro_module modules/mod_macro.so
 LoadModule mime_module modules/mod_mime.so
 #LoadModule mime_magic_module modules/mod_mime_magic.so
@@ -150,6 +151,7 @@ LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 #LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_http2_module modules/mod_proxy_http2.so
 #LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
+#LoadModule proxy_uwsgi_module modules/mod_proxy_uwsgi.so
 #LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 #LoadModule ratelimit_module modules/mod_ratelimit.so
 #LoadModule reflector_module modules/mod_reflector.so
